feature: auto-updating address

--- a/src/components/Pages/WorkWithUsersPage/Residents/ResidentsStyle.css
+++ b/src/components/Pages/WorkWithUsersPage/Residents/ResidentsStyle.css
@@ -5,6 +5,8 @@
 .title-wrapper {
   display: flex;
   justify-content:space-around;
+  margin: 25px;
+  font-size: 20px;
 }
 
 .residentsCard-wrapper {
